# AdventofCodeTemplate

./: .gitignore  CMakeLists.txt  README.md  aoc  aoc.sh  main.cpp
Challenge_Template/: CMakeLists.txt  DayX.cpp  TEMPLATE_NAME.cpp  input.txt
Challenges/: README.md
Challenges/Day01/: CMakeLists.txt  Day01.cpp
Utils/: AoCUtils.cpp  AoCUtils.h
